--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,7 +15,6 @@
         <item name="android:textSize">@dimen/subtitle_text_size</item>
         <item name="android:layout_marginTop">@dimen/margin_top_large</item>
         <item name="android:gravity">center</item>
-        <item name="android:textColor">@color/orange</item>
     </style>
 
     <style name="OrdinaryTextView">
@@ -23,7 +22,7 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:textSize">@dimen/ordinary_text_size</item>
         <item name="android:layout_margin">@dimen/margin_all_side</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">?android:attr/colorPrimaryDark</item>
     </style>
 
     <style name="MyEditTextStyle">
@@ -39,7 +38,7 @@
     <style name="MyButtonStyle">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">wrap_content</item>
-        <item name="backgroundTint">@color/blue</item>
+        <item name="backgroundTint">?android:attr/textColorSecondary</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:layout_marginTop">@dimen/margin_top_large</item>
     </style>
